--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | SR Demo WebGL build 11Jul20</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/WebGL 11Jul20.json");
+      UnityLoader.instantiate("unityContainer", "Build/WebGL 11Jul20 v2.json");
     </script>
   </head>
   <body>
