Revert "New build, assets with materials"
This reverts commit 29cbbad9baf59b3070e0bc3d50e1ab4bacecf5b3.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | SR Demo WebGL build 12Jul20</title>
+    <title>Unity WebGL Player | SR Demo WebGL build 11Jul20</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/WebGL 12Jul20.json");
+      UnityLoader.instantiate("unityContainer", "Build/WebGL 11Jul20 v2.json");
     </script>
   </head>
   <body>
