--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | SR Demo WebGL build 12Jul20</title>
+    <title>Unity WebGL Player | PubBreweryWebGL</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/WebGL 12Jul20.json");
+      UnityLoader.instantiate("unityContainer", "Build/PubBreweryWebGL v1.json");
     </script>
   </head>
   <body>
-    <div id="unityContainer" style="width: 700px; height: 600px; margin: auto"></div>
+    <div id="unityContainer" style="width: 960px; height: 600px; margin: auto"></div>
   </body>
 </html>
